--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,23 @@
     <artifactId>java-src-test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <properties>
+        <jdk.version>1.7</jdk.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <!-- 设置compiler插件，字符编码，jdk编译版本 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
